Loading Screen animation for the calclator

--- a/project2/index.html
+++ b/project2/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    
+    <div class="intro">
+        <h1 class= "intro-header">
+            <span class="logo">The</span><span class="logo"> Calculator</span>
+        </h1>
+    </div>
     <div class="calculator-grid">
         <div class="output">
             <div data-previous-operand class="previous-operand"></div>
