--- a/project4/shopping-cart/index.html
+++ b/project4/shopping-cart/index.html
@@ -5,82 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping Cart</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <div class="navbar">
       <h2>Clothing Store</h2>
       <div class="cart">
         <i class="bi bi-cart"></i>
-        <div class="cartamount">0</div>
+        <div id="cartamount" class="cartamount">0</div>
       </div>
     </div>
-    <div class="shop" id="shop">
-
-        <div class="item">
-            <img width="219" src="images/img-1.jpg" alt="">
-            <div class="details">
-                <h3>Casual Shirt</h3>
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-                <div class="price-quantity">
-                    <h2>$45</h2>
-                    <div class="buttons">
-
-                        <i class="bi bi-plus-square"></i>
-                        <div class="quantity">0</div>
-                        <i class="bi bi-dash-square"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="item">
-            <img width="219" src="images/img-2.jpg" alt="">
-            <div class="details">
-                <h3>Office Shirt</h3>
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-                <div class="price-quantity">
-                    <h2>$70</h2>
-                    <div class="buttons">
-
-                        <i class="bi bi-plus-square"></i>
-                        <div class="quantity">0</div>
-                        <i class="bi bi-dash-square"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="item">
-            <img width="219" src="images/img-3.jpg" alt="">
-            <div class="details">
-                <h3>T-Shirt</h3>
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-                <div class="price-quantity">
-                    <h2>$25</h2>
-                    <div class="buttons">
-
-                        <i class="bi bi-plus-square"></i>
-                        <div class="quantity">0</div>
-                        <i class="bi bi-dash-square"></i>
-                    </div>
-                </div>
-            </div>
-        </div>        <div class="item">
-            <img width="219" src="images/img-4.jpg" alt="">
-            <div class="details">
-                <h3>Men's Suit</h3>
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-                <div class="price-quantity">
-                    <h2>$100</h2>
-                    <div class="buttons">
-
-                        <i class="bi bi-plus-square"></i>
-                        <div class="quantity">0</div>
-                        <i class="bi bi-dash-square"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="shop" id="shop"></div>
   </body>
   <script src="main.js"></script>
 </html>
